--- a/apps/t1_contact/templates/index.html
+++ b/apps/t1_contact/templates/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<title>Coffee cups test assignment</title>	
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	{% load staticfiles %}
-	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Coffee cups test assignment{% endblock title %}
+
+{% block content %}
 	<div class="container">
 		<h3>42 Coffee Cups Test Assignment</h3>
 	   <div class="row">
@@ -67,6 +62,5 @@
 		   </div>
 	   </div>
 	</div>
-<hr/>
-</body>
-</html>
+	<hr/>
+{% endblock content %}
