--- a/apps/t1_contact/templates/index.html
+++ b/apps/t1_contact/templates/index.html
@@ -3,8 +3,7 @@
 {% block title %}Coffee cups test assignment{% endblock title %}
 
 {% block content %}
-	<div class="container">
-		<h3>42 Coffee Cups Test Assignment</h3>
+		{# <h3>42 Coffee Cups Test Assignment</h3> #}
 	   <div class="row">
 			<div class="col-md-2 col-xs-6">
 		      <label for="" class="">First name</label>
@@ -61,6 +60,4 @@
 			   {{ person.other_contacts|linebreaks }}
 		   </div>
 	   </div>
-	</div>
-	<hr/>
 {% endblock content %}
