--- a/apps/t3_requests/templates/requests.html
+++ b/apps/t3_requests/templates/requests.html
@@ -5,16 +5,10 @@
 {% block content %}
 	<h3>Last requests</h3>
 	<div class="requests">
-		<p>1. [April 14, 2016, 6:08 p.m.] GET: /requests/ </p>		
-		<p>2. [April 14, 2016, 6:08 p.m.] GET: /edit/ </p>		
-		<p>3. [April 14, 2016, 6:08 p.m.] GET: /requests/ </p>		
-		<p>4. [April 14, 2016, 6:08 p.m.] GET: / </p>		
-		<p>5. [April 14, 2016, 6:07 p.m.] GET: / </p>		
-		<p>6. [April 14, 2016, 6:07 p.m.] GET: /requests/ </p>		
-		<p>7. [April 14, 2016, 6:07 p.m.] GET: /requests/ </p>		
-		<p>8. [April 14, 2016, 6:07 p.m.] GET: / </p>		
-		<p>9. [April 14, 2016, 6:07 p.m.] GET: / </p>		
-		<p>10. [April 14, 2016, 6:07 p.m.] GET: / </p>
+		{% for req in requests %}
+			{# <p>{{ forloop.counter}}. [{{ req.created|date:"Y-m-d H:i:s" }}] {{ req.method }}: {{ req.path }} {{ req.query }}</p> #}
+			<p>{{ forloop.counter}}. {{ req }}</p>
+		{% endfor %}
 	</div>
 {% endblock %}
 {% block footer %}
