--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'css/screen.css' %}" media="screen, projection"/>
+        <link rel="stylesheet" href="{% static 'css/screen.css' %}" media="screen, projection"/>        
 
         {% block extra_head %}{% endblock extra_head %}
 
@@ -35,4 +35,7 @@
             {% endblock %}
         </div>
     </body>
+    <script src='{% static "js/jquery-1.10.2.js" %}'></script>
+    {% block scripts %}        
+    {% endblock %}
 </html>
