--- a/apps/t3_requests/templates/requests.html
+++ b/apps/t3_requests/templates/requests.html
@@ -18,5 +18,6 @@
 	<a href="{% url 'index' %}">index</a>
 {% endblock %}
 {% block scripts %}
+{{ block.super }}
 	<script src='{% static "js/requests.js" %}'></script>
 {% endblock %}
