--- a/apps/t1_contact/templates/index.html
+++ b/apps/t1_contact/templates/index.html
@@ -1,72 +1,68 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<title>Coffee cups test assignment</title>	
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	{% load staticfiles %}
-	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 	<div class="container">
 		<h3>42 Coffee Cups Test Assignment</h3>
-	   <div class="row">
-			<div class="col-md-2 col-xs-6">
-		      <label for="" class="">First name</label>
+		{% if person %}
+		    <div class="row">
+				<div class="col-md-2 col-xs-6">
+			        <label for="" class="">First name</label>
+			    </div>
+				<div class="col-md-4 col-xs-6">
+				   {{ person.first_name }}
+			    </div>
+				<div class="col-md-2 col-xs-6">
+			       <label for="" class="">Email</label>
+			    </div>
+				<div class="col-md-4 col-xs-6">
+				   {{ person.email }}
+			   </div>
+		    </div>
+		    <div class="row">
+				<div class="col-md-2 col-xs-6">
+		 	        <label for="" class="">Last name</label>
+			    </div>
+				<div class="col-md-4 col-xs-6">
+				   {{ person.last_name }}
+			    </div>
+				<div class="col-md-2 col-xs-6">
+			      <label for="" class="">Jabber</label>
+		 	    </div>
+				<div class="col-md-4 col-xs-6">
+				   {{ person.jabber }}
+			   </div>
 		   </div>
-			<div class="col-md-4 col-xs-6">
-			   {{ person.first_name }}
+		   <div class="row">
+				<div class="col-md-2 col-xs-6">
+			      <label for="" class="">Date of birth</label>
+			    </div>
+				<div class="col-md-4 col-xs-6">
+				   {{ person.date_of_birth|date:"Y-m-d" }}
+			    </div>
+				<div class="col-md-2 col-xs-6">
+			      <label for="" class="">Skype</label>
+			    </div>
+				<div class="col-md-4 col-xs-6">
+				   {{ person.skype }}
+			    </div>
 		   </div>
-			<div class="col-md-2 col-xs-6">
-		      <label for="" class="">Email</label>
+		   <div class="row">
+				<div class="col-md-2 col-xs-6">
+			      <label for="" class="">Bio</label>
+			    </div>
+				<div class="col-md-4 col-xs-6">
+				   {{ person.bio|safe|linebreaks}}
+			    </div>
+				<div class="col-md-2 col-xs-6">
+			      <label for="" class="">Other contacts</label>
+			    </div>
+				<div class="col-md-4 col-xs-6">
+				   {{ person.other_contacts|linebreaks }}
+			   </div>
 		   </div>
-			<div class="col-md-4 col-xs-6">
-			   {{ person.email }}
-		   </div>
-	   </div>
-	   <div class="row">
-			<div class="col-md-2 col-xs-6">
-		      <label for="" class="">Last name</label>
-		   </div>
-			<div class="col-md-4 col-xs-6">
-			   {{ person.last_name }}
-		   </div>
-			<div class="col-md-2 col-xs-6">
-		      <label for="" class="">Jabber</label>
-		   </div>
-			<div class="col-md-4 col-xs-6">
-			   {{ person.jabber }}
-		   </div>
-	   </div>
-	   <div class="row">
-			<div class="col-md-2 col-xs-6">
-		      <label for="" class="">Date of birth</label>
-		   </div>
-			<div class="col-md-4 col-xs-6">
-			   {{ person.date_of_birth|date:"Y-m-d" }}
-		   </div>
-			<div class="col-md-2 col-xs-6">
-		      <label for="" class="">Skype</label>
-		   </div>
-			<div class="col-md-4 col-xs-6">
-			   {{ person.skype }}
-		   </div>
-	   </div>
-	   <div class="row">
-			<div class="col-md-2 col-xs-6">
-		      <label for="" class="">Bio</label>
-		   </div>
-			<div class="col-md-4 col-xs-6">
-			   {{ person.bio|safe|linebreaks}}
-		   </div>
-			<div class="col-md-2 col-xs-6">
-		      <label for="" class="">Other contacts</label>
-		   </div>
-			<div class="col-md-4 col-xs-6">
-			   {{ person.other_contacts|linebreaks }}
-		   </div>
-	   </div>
+	   {% else %}
+		   <p class="lead">No person was found</p>
+	   {% endif %}
 	</div>
-<hr/>
-</body>
-</html>
+	<hr/>
+{% endblock %}
