--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/screen.css' %}" media="screen, projection"/>
 
         {% block extra_head %}{% endblock extra_head %}
