--- a/apps/t3_requests/templates/requests.html
+++ b/apps/t3_requests/templates/requests.html
@@ -7,9 +7,7 @@
 	<h3>Last requests</h3>
 	<div class="requests">
 		{% for req in requests %}
-			{# <p>{{ forloop.counter}}. [{{ req.created|date:"Y-m-d H:i:s" }}] {{ req.method }}: {{ req.path }} {{ req.query }}</p> #}
-			<p>{{ forloop.counter}}. {{ req }}</p>
-			<input type="hidden" value="{{ req.id }}">
+			<p data-object-id="{{ req.id }}">{{ forloop.counter}}. {{ req }}</p>
 		{% endfor %}
 	</div>
 
