ticket:14 fixes and test added

--- a/apps/t3_requests/templates/requests.html
+++ b/apps/t3_requests/templates/requests.html
@@ -36,5 +36,5 @@
 <script type="text/javascript">
 	var changePriorityUrl = {% url 'change_priority' %};
 </script>
-    <script src='{% static "js/requests.js" %}'></script>
+    <script src='{% static "js/new_requests.js" %}'></script>
 {% endblock %}
